2008-03-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefielduff.cpp: changed anglecalc.zi = ..[0] to
	... [5]. This bug was reported by Bob Hanson in mail.

2008-03-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Fix LineSearch(*,*) to respect fixed atoms.
	Don't calculate gradient in NumericalDerivative.

2008-03-24 Chris Morley

	* src/formats/gaussformat.cpp: Fix bug #1924342 by looking for
	"Multiplicity" as suggested by Richard West

2008-03-24  Noel O'Boyle  <baoilleach@gmail.com>
	
	* windows-vc2005/OBPython/openbabel.py: Removed from SVN (it is
	created with SWIG as part of the build process)

2008-03-24  Noel O'Boyle  <baoilleach@gmail.com>
	
	* scripts/openbabel-python.i: Added griddata.h

2008-03-23  Noel O'Boyle  <baoilleach@gmail.com>
	
	* scripts/python/pybel.py: First attempts at incorporating the recent
	work by Tim, Geoff and others on geometry optimisation and 3D
	coordinate generation.

2008-03-23  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Fix for bug reported by Florian Nigsch.
	The Python iterators didn't correctly handle the case where there was
	nothing to iterate over.

2008-03-22 Chris Morley

	* src/builder.cpp: Slightly cleaner version of yesterdays's change.
	Load data when _fragments is empty.

	* src/formats/gausscubeformat.cpp, src/formats/gausszmatformat.cpp,
	src/formats/mmcifformat.cpp, src/formats/moldenformat.cpp,
	src/formats/msmsformat.cpp:
	Add some flags for Read or Write only, remove duplicate registration
	statements(IDs are not case sensitive), edit Description so options
	appear properly in GUI.
	
	* src/formats/acrformat.cpp, src/formats/chemdrawcdx.cpp,
	src/formats/qchemformat.cpp, src/formats/xml/cdxmlformat.cpp,
	src/formats/mopacformat.cpp, src/formats/msiformat.cpp: 
	Reduce compiler warnings by commenting out unused variables.
	
	* src/obutil.cpp: Remove OBAPI from definitions; only needed in 
	declarations
